@@ -19,13 +19,11 @@
 package org.apache.pinot.integration.tests.custom;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.google.common.collect.ImmutableList;
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
 import org.apache.avro.file.DataFileWriter;
 import org.apache.avro.generic.GenericData;
-import org.apache.avro.generic.GenericDatumWriter;
 import org.apache.pinot.spi.config.table.TableConfig;
 import org.apache.pinot.spi.config.table.TableType;
 import org.apache.pinot.spi.data.FieldSpec;
@@ -77,7 +75,7 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
 
     // create avro schema
     org.apache.avro.Schema avroSchema = org.apache.avro.Schema.createRecord("myRecord", null, null, false);
-    avroSchema.setFields(ImmutableList.of(
+    avroSchema.setFields(List.of(
         new org.apache.avro.Schema.Field(MET_DOUBLE_SORTED,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.DOUBLE), null, null),
         // Please do not use FLOAT type in Avro schema, it is lossy.
@@ -97,12 +95,10 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
         new org.apache.avro.Schema.Field(MET_FLOAT_UNSORTED_NO_DIC,
             org.apache.avro.Schema.create(org.apache.avro.Schema.Type.DOUBLE), null, null)));
 
-    // create avro file
-    File avroFile = new File(_tempDir, "data.avro");
-    try (DataFileWriter<GenericData.Record> fileWriter = new DataFileWriter<>(new GenericDatumWriter<>(avroSchema))) {
-      fileWriter.create(avroSchema, avroFile);
-      double sortedValue = 0.0;
-      double unsortedValue = 0.05;
+    double sortedValue = 0.0;
+    double unsortedValue = 0.05;
+    try (AvroFilesAndWriters avroFilesAndWriters = createAvroFilesAndWriters(avroSchema)) {
+      List<DataFileWriter<GenericData.Record>> writers = avroFilesAndWriters.getWriters();
       for (int i = 0; i < NUM_DOCS; i++) {
         // create avro record
         GenericData.Record record = new GenericData.Record(avroSchema);
@@ -121,10 +117,10 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
         }
 
         // add avro record to file
-        fileWriter.append(record);
+        writers.get(i % getNumAvroFiles()).append(record);
       }
+      return avroFilesAndWriters.getAvroFiles();
     }
-    return List.of(avroFile);
   }
 
   @Override
@@ -140,7 +136,7 @@ public class FloatingPointDataTypeTest extends CustomDataQueryClusterIntegration
 
   @Override
   protected List<String> getNoDictionaryColumns() {
-    return ImmutableList.of(MET_DOUBLE_SORTED_NO_DIC, MET_FLOAT_SORTED_NO_DIC, MET_DOUBLE_UNSORTED_NO_DIC,
+    return List.of(MET_DOUBLE_SORTED_NO_DIC, MET_FLOAT_SORTED_NO_DIC, MET_DOUBLE_UNSORTED_NO_DIC,
         MET_FLOAT_UNSORTED_NO_DIC);
   }
 
